--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -2,22 +2,31 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/nav_profile"
+        android:icon="@drawable/profile_icon"
+        android:title="Profile" />
+    <item
         android:id="@+id/nav_home"
+        android:icon="@drawable/home"
         android:title="Home" />
     <item
         android:id="@+id/nav_marathon"
+        android:icon="@drawable/friends"
         android:title="Marathon" />
     <item
         android:id="@+id/nav_find_marathon"
         android:title="Find Marathon" />
     <item
         android:id="@+id/nav_message"
+        android:icon="@drawable/messages"
         android:title="Message" />
     <item
         android:id="@+id/nav_settings"
+        android:icon="@drawable/settings"
         android:title="Settings" />
     <item
         android:id="@+id/nav_Logout"
+        android:icon="@drawable/logout"
         android:title="Logout" />
 
 
