--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,13 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/all_publications"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="669dp"
+                android:layout_marginTop="25pt" />
         </FrameLayout>
+
+        <include
+            android:id="@+id/main_page_toolbar"
+            layout="@layout/app_bar_layout"></include>
     </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
