--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,20 +9,20 @@
 
     <Button
         android:id="@+id/login_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="420dp"
+        android:layout_marginTop="300dp"
         android:background="@drawable/button"
-        android:padding="25dp"
+        android:padding="10dp"
         android:text="LOGIN" />
 
     <EditText
         android:id="@+id/login_password"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="330dp"
+        android:layout_marginTop="240dp"
         android:background="@drawable/inputs"
         android:drawableLeft="@drawable/password"
         android:ems="10"
@@ -34,15 +34,14 @@
 
         android:id="@+id/login_email"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="180dp"
         android:background="@drawable/inputs"
         android:drawableLeft="@drawable/email"
         android:ems="10"
         android:hint="E-mail"
-        android:inputType="textEmailAddress"
-        android:padding="10dp" />
+        android:inputType="textEmailAddress" />
 
     <ImageView
         android:id="@+id/login_icon"
@@ -51,7 +50,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         app:srcCompat="@drawable/logo" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -60,44 +58,44 @@
 
         <ImageView
             android:id="@+id/facebook_signin_button"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="25dp"
+            android:layout_width="80dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="70dp"
             android:layout_marginTop="8dp"
             android:src="@drawable/facebook" />
 
         <ImageView
             android:id="@+id/twitter_signin_button"
-            android:layout_width="125dp"
-            android:layout_height="105dp"
-            android:layout_marginLeft="5dp"
+            android:layout_width="105dp"
+            android:layout_height="85dp"
+            android:layout_marginLeft="10dp"
             android:src="@drawable/twitter" />
+
 
         <ImageView
             android:id="@+id/google_signin_button"
-            android:layout_width="90dp"
-            android:layout_height="75dp"
-            android:layout_marginLeft="15dp"
+            android:layout_width="70dp"
+            android:layout_height="55dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:src="@drawable/google" />
 
     </LinearLayout>
-
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="540dp"
+        android:layout_marginTop="390dp"
         android:text="or login with"
         android:textAlignment="center" />
 
     <TextView
         android:id="@+id/register_account_link"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="500dp"
+        android:layout_marginTop="350dp"
         android:ems="10"
         android:padding="10dp"
         android:text="Don´t have an Account. Need New Account? "
