Crear Cuenta, Login y Logout. Funcionalidad 100%

--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/register"
-    app:popupTheme="@style/Theme.AppCompat.Light"
-    app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
     tools:context=".SetupActivity">
 
     <Button
@@ -17,9 +14,7 @@
         android:layout_marginTop="550dp"
         android:background="@drawable/button"
         android:padding="10dp"
-        android:text="SAVE"
-        app:layout_aspectRatio="50%"
-        app:layout_widthPercent="10%" />
+        android:text="SAVE" />
 
     <EditText
         android:id="@+id/setup_username"
