Publicaciones de usuarios y Login con google.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,19 +15,34 @@
             android:id="@+id/main_conteiner"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="0dp">
+            android:layout_below="@+id/main_page_toolbar"
+            android:layout_alignParentStart="true">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/all_publications"
+                android:id="@+id/all_users_post_list"
                 android:layout_width="match_parent"
-                android:layout_height="669dp"
-                android:layout_marginTop="25pt" />
+                android:layout_height="match_parent" />
         </FrameLayout>
+
+        <ImageButton
+            android:id="@+id/add_new_post_button"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_above="@+id/main_conteiner"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="12dp"
+            android:layout_marginBottom="4dp"
+            android:background="@color/colorPrimaryDark"
+            android:baselineAlignBottom="false"
+            android:focusableInTouchMode="false"
+            android:scaleType="centerCrop"
+            android:src="@drawable/country" />
 
         <include
             android:id="@+id/main_page_toolbar"
             layout="@layout/app_bar_layout"></include>
+
+
     </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
