--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -20,7 +20,7 @@
         android:text="Update Post" />
 
     <EditText
-        android:id="@+id/post_description"
+        android:id="@+id/click_post_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/select_post_image"
