--- a/app/src/main/res/layout/all_post_layout.xml
+++ b/app/src/main/res/layout/all_post_layout.xml
@@ -7,14 +7,16 @@
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
         android:layout_marginBottom="4dp"
-        android:orientation="vertical">
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/post_border"
+        android:orientation="vertical"
+        android:padding="10dp">
 
         <ImageView
-            android:id="@+id/post_image"
+            android:id="@+id/click_post_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_margin="3dp"
@@ -36,8 +38,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
                     android:orientation="horizontal"
+                    android:layout_marginLeft="5dp"
                     android:padding="2dp">
 
                     <TextView
@@ -46,7 +48,7 @@
                         android:layout_height="wrap_content"
                         android:text="has been updated a post"
                         android:textColor="@android:color/darker_gray"
-                        android:textSize="13sp"
+                        android:textSize="10sp"
                         android:textStyle="bold" />
 
                     <TextView
@@ -55,15 +57,14 @@
                         android:layout_height="wrap_content"
                         android:text="Date"
                         android:textColor="@android:color/black"
-                        android:textSize="13sp" />
-
+                        android:textSize="11sp" />
                     <TextView
                         android:id="@+id/post_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Time"
                         android:textColor="@android:color/black"
-                        android:textSize="13sp" />
+                        android:textSize="11sp" />
                 </LinearLayout>
 
                 <TextView
@@ -79,7 +80,6 @@
                     android:textStyle="bold" />
 
             </LinearLayout>
-
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/post_profile_image"
                 android:layout_width="60dp"
@@ -89,15 +89,14 @@
                 android:src="@drawable/profile" />
 
         </LinearLayout>
-
         <TextView
-            android:id="@+id/post_description"
+            android:id="@+id/click_post_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="Pst Description.."
             android:layout_marginLeft="3dp"
             android:layout_marginRight="3dp"
             android:padding="3dp"
-            android:text="Pst Description.."
             android:textColor="@android:color/black"
             android:textSize="14sp" />
     </LinearLayout>
