--- a/app/src/main/res/layout/all_post_layout.xml
+++ b/app/src/main/res/layout/all_post_layout.xml
@@ -12,23 +12,42 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@drawable/post_border"
-        android:orientation="vertical"
-        android:padding="10dp">
+        android:orientation="vertical">
+
 
         <ImageView
             android:id="@+id/click_post_image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_margin="3dp"
             android:adjustViewBounds="true"
+            android:padding="3dp"
             android:scaleType="centerCrop" />
 
+        <TextView
+            android:id="@+id/click_post_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Pst Description.."
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:padding="3dp"
+            android:textColor="@android:color/black"
+            android:textSize="14sp" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
             android:orientation="horizontal"
+            android:layout_margin="7dp"
             android:padding="5dp">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/post_profile_image"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_marginLeft="4dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/profile" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -80,25 +99,9 @@
                     android:textStyle="bold" />
 
             </LinearLayout>
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/post_profile_image"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginLeft="4dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/profile" />
+
 
         </LinearLayout>
-        <TextView
-            android:id="@+id/click_post_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Pst Description.."
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="3dp"
-            android:padding="3dp"
-            android:textColor="@android:color/black"
-            android:textSize="14sp" />
     </LinearLayout>
 
 </RelativeLayout>
