--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -5,7 +5,18 @@
     android:layout_height="match_parent"
     android:background="@drawable/register"
     tools:context=".SetupActivity">
-    <Button
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/settings_toolbar"
+        android:layout_alignParentStart="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
         android:id="@+id/setup_button"
         android:layout_width="200dp"
         android:layout_height="40dp"
@@ -118,5 +129,6 @@
         android:src="@drawable/profile">
 
     </de.hdodenhof.circleimageview.CircleImageView>
-
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
