--- a/app/src/main/res/layout/all_carreras_layout.xml
+++ b/app/src/main/res/layout/all_carreras_layout.xml
@@ -5,7 +5,6 @@
     android:orientation="vertical">
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -14,7 +13,6 @@
         android:layout_marginBottom="4dp"
         android:background="@drawable/post_border"
         android:orientation="vertical">
-
 
         <ImageView
             android:id="@+id/click_maraton_image"
@@ -25,17 +23,10 @@
             android:scaleType="centerCrop" />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="7dp"
-            android:layout_marginTop="1dp"
-            android:orientation="horizontal"
-            android:padding="5dp">
-
-            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+            android:id="@+id/fecha_publicacion"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -85,9 +76,30 @@
                     android:textSize="14sp"
                     android:textStyle="bold" />
 
-
-            </LinearLayout>
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/maraton_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:padding="3dp"
+            android:text="Pst Description.."
+            android:textColor="@android:color/black"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/maraton_place"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:padding="3dp"
+            android:text="Lugar del Maraton"
+            android:textColor="@android:color/black"
+            android:textSize="12sp" />
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -146,26 +158,5 @@
                 android:textSize="11sp" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/maraton_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:padding="3dp"
-            android:text="Pst Description.."
-            android:textColor="@android:color/black"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/maraton_place"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:padding="3dp"
-            android:text="Lugar del Maraton"
-            android:textColor="@android:color/black"
-            android:textSize="12sp" />
     </LinearLayout>
 </RelativeLayout>
