--- a/app/src/main/res/layout/all_carreras_layout.xml
+++ b/app/src/main/res/layout/all_carreras_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +13,6 @@
         android:layout_marginBottom="4dp"
         android:background="@drawable/post_border"
         android:orientation="vertical">
-
         <ImageView
             android:id="@+id/click_maraton_image"
             android:layout_width="match_parent"
@@ -23,58 +22,58 @@
             android:scaleType="centerCrop" />
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:id="@+id/fecha_publicacion"
+            android:orientation="vertical">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:gravity="center"
-            android:id="@+id/fecha_publicacion"
-                android:orientation="vertical">
+                android:orientation="horizontal"
+                android:padding="2dp">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:gravity="center"
-                    android:orientation="horizontal"
-                    android:padding="2dp">
-
-
-                    <TextView
-                        android:id="@+id/text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Has been updated a post"
-                        android:textColor="@android:color/darker_gray"
-                        android:textSize="10sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/post_admin_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Date"
-                        android:textColor="@android:color/black"
-                        android:textSize="11sp" />
-
-                    <TextView
-                        android:id="@+id/post_admin_time"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Time"
-                        android:textColor="@android:color/black"
-                        android:textSize="11sp" />
-                </LinearLayout>
 
                 <TextView
-                    android:id="@+id/maraton_name"
-                    android:layout_width="match_parent"
+                    android:id="@+id/text"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="8dp"
-                    android:text="Marathon Name"
-                    android:textAlignment="center"
-                    android:textColor="@color/colortitle"
-                    android:textSize="14sp"
+                    android:text="Has been updated a post"
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="10sp"
                     android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/post_admin_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Date"
+                    android:textColor="@android:color/black"
+                    android:textSize="11sp" />
+
+                <TextView
+                    android:id="@+id/post_admin_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Time"
+                    android:textColor="@android:color/black"
+                    android:textSize="11sp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/maraton_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="8dp"
+                android:text="Marathon Name"
+                android:textAlignment="center"
+                android:textColor="@color/colortitle"
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
