--- a/app/src/main/res/layout/all_carreras_layout.xml
+++ b/app/src/main/res/layout/all_carreras_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
     <LinearLayout
@@ -11,26 +11,27 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="4dp"
+        android:gravity="center"
         android:background="@drawable/post_border"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <ImageView
+            <ImageView
                 android:id="@+id/click_maraton_image"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:adjustViewBounds="true"
-                android:padding="3dp"
                 android:scaleType="centerCrop" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="2dp">
-
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/text"
@@ -38,7 +39,7 @@
                     android:layout_height="wrap_content"
                     android:text="Has been updated a post"
                     android:textColor="@android:color/darker_gray"
-                    android:textSize="10sp"
+                    android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -47,7 +48,7 @@
                     android:layout_height="wrap_content"
                     android:text="Date"
                     android:textColor="@android:color/black"
-                    android:textSize="11sp" />
+                    android:textSize="12sp" />
 
                 <TextView
                     android:id="@+id/post_admin_time"
@@ -55,20 +56,19 @@
                     android:layout_height="wrap_content"
                     android:text="Time"
                     android:textColor="@android:color/black"
-                    android:textSize="11sp" />
+                    android:textSize="12sp" />
             </LinearLayout>
+
             <TextView
                 android:id="@+id/maraton_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="8dp"
                 android:text="Marathon Name"
                 android:textAlignment="center"
                 android:textColor="@color/colortitle"
                 android:textSize="14sp"
                 android:textStyle="bold" />
-
+        </LinearLayout>
 
         <TextView
             android:id="@+id/maraton_description"
@@ -107,7 +107,7 @@
                 android:padding="3dp"
                 android:text="Date"
                 android:textColor="@android:color/black"
-                android:textSize="11sp" />
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/maraton_time"
@@ -118,7 +118,7 @@
                 android:padding="3dp"
                 android:text="Time"
                 android:textColor="@android:color/black"
-                android:textSize="11sp" />
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -136,7 +136,7 @@
                 android:padding="3dp"
                 android:text="Contact Name"
                 android:textColor="@android:color/black"
-                android:textSize="11sp" />
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/contact_number"
@@ -147,7 +147,7 @@
                 android:padding="3dp"
                 android:text="Contact Number"
                 android:textColor="@android:color/black"
-                android:textSize="11sp" />
+                android:textSize="12sp" />
         </LinearLayout>
 
     </LinearLayout>
