--- a/app/src/main/res/layout/activity_click_post.xml
+++ b/app/src/main/res/layout/activity_click_post.xml
@@ -39,9 +39,8 @@
         android:id="@+id/click_post_image"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_margin="10dp"
+        android:layout_below="@+id/settings_toolbar"
         app:srcCompat="@drawable/select_image" />
 
 
@@ -61,4 +60,9 @@
         android:textColor="@android:color/black"
         android:textSize="18sp"
         android:textStyle="bold" />
+
+    <include
+        android:id="@+id/settings_toolbar"
+        layout="@layout/app_bar_layout"></include>
+
 </RelativeLayout>
