--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -32,10 +32,13 @@
     <Chronometer
         android:id="@+id/cronometro"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:textAlignment="center"
+        android:layout_below="@+id/settings_toolbar"
+        android:layout_marginTop="20dp"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="30dp"></Chronometer>
+        android:layout_marginBottom="20dp"
+        android:textSize="40dp"></Chronometer>
 
     <fragment
         android:id="@+id/map"
