--- a/app/src/main/res/layout/activity_maraton.xml
+++ b/app/src/main/res/layout/activity_maraton.xml
@@ -13,7 +13,7 @@
             android:id="@+id/maraton_conteiner"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/main_page_toolbar"
+            android:layout_below="@+id/maraton_toolbar"
             android:layout_alignParentStart="true">
 
             <androidx.recyclerview.widget.RecyclerView
@@ -23,9 +23,8 @@
         </FrameLayout>
 
         <include
-            android:id="@+id/main_page_toolbar"
+            android:id="@+id/maraton_toolbar"
             layout="@layout/app_bar_layout"></include>
-
 
     </RelativeLayout>
 
