--- a/app/src/main/res/layout/activity_mi_maraton.xml
+++ b/app/src/main/res/layout/activity_mi_maraton.xml
@@ -1,8 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MiMaratonActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <FrameLayout
+            android:id="@+id/mi_maraton_conteiner"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/mi_maraton_toolbar"
+            android:layout_alignParentStart="true">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/all_mi_maraton_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </FrameLayout>
+
+        <include
+            android:id="@+id/mi_maraton_toolbar"
+            layout="@layout/app_bar_layout"></include>
+    </RelativeLayout>
+</RelativeLayout>
