--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,9 +12,10 @@
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="370dp"
+        android:layout_below="@+id/register_confirm_password"
         android:background="@drawable/button"
         android:padding="10dp"
+        android:layout_marginTop="30dp"
         android:text="Create Account" />
 
     <EditText
@@ -22,12 +23,13 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="250dp"
+        android:layout_below="@+id/register_email"
         android:background="@drawable/inputs"
         android:drawableLeft="@drawable/password"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:layout_marginTop="20dp"
         android:padding="10dp" />
 
     <EditText
@@ -35,12 +37,13 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="300dp"
+        android:layout_below="@+id/register_password"
         android:background="@drawable/inputs"
         android:drawableLeft="@drawable/password"
         android:ems="10"
         android:hint="Confirm Password"
         android:inputType="textPassword"
+        android:layout_marginTop="20dp"
         android:padding="10dp" />
 
     <EditText
@@ -49,12 +52,13 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
+        android:layout_below="@+id/register_icon"
         android:background="@drawable/inputs"
         android:drawableLeft="@drawable/email"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textEmailAddress"
+        android:layout_marginTop="30dp"
         android:padding="10dp" />
 
     <ImageView
@@ -63,5 +67,10 @@
         android:layout_height="150dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
+        android:layout_below="@+id/settings_toolbar"
         app:srcCompat="@drawable/logo" />
+
+    <include
+        android:id="@+id/settings_toolbar"
+        layout="@layout/app_bar_layout"></include>
 </RelativeLayout>
