--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -131,4 +131,8 @@
     </de.hdodenhof.circleimageview.CircleImageView>
         </RelativeLayout>
     </ScrollView>
+
+    <include
+        android:id="@+id/settings_toolbar"
+        layout="@layout/app_bar_layout"></include>
 </RelativeLayout>
